--- a/README.org
+++ b/README.org
@@ -10,7 +10,6 @@ contenido.
 * Contenido                                                             :TOC:
 - [[#lecturas-del-año-2021][Lecturas del año 2021]]
   - [[#junio-de-2021][Junio de 2021]]
-- [[#09-jun-21][09-Jun-21]]
   - [[#mayo-de-2021][Mayo de 2021]]
   - [[#abril-de-2021][Abril de 2021]]
   - [[#marzo-de-2021][Marzo de 2021]]
@@ -22,7 +21,12 @@ contenido.
 
 ** Junio de 2021
 
-* 09-Jun-21
+*** 10-Jun-21
++ [[https://link.springer.com/content/pdf/10.1007%2Fs10817-020-09584-7.pdf][Certified quantum computation in Isabelle/HOL]]. ~ Anthony Bordg, Hanna Lachnitt, Yijun He. #ITP #IsabelleHOL
++ [[https://icube-publis.unistra.fr/docs/15134/hal.pdf][Combining pencil/paper proofs and formal proofs, a challenge for Artificial Intelligence and mathematics education]]. ~ Julien Narboux, Viviane Durand-Guerrier. #ITP #Coq #Math
++ [[https://ilyasergey.net/assets/pdf/papers/Watanabe-MComp.pdf][A framework for certified program synthesis]]. ~ Yasunari Watanabe. #PhDThesis #ITP #Coq
+
+*** 09-Jun-21
 + [[https://arxiv.org/abs/2106.03906][Learning to guide a saturation-based theorem prover]]. ~ Ibrahim Abdelaziz et als. #ATP #MachineLearning
 + [[https://coqmath.blogspot.com/2015/01/learning-set-theory-through-coq-part-1.html][Learning set theory through Coq (part 1)]]. ~ Kyle Stemen. #ITP #Coq #Math
 + [[https://coqmath.blogspot.com/2015/02/learning-set-theory-through-coq-part-2.html][Learning set theory through Coq (part 2)]]. ~ Kyle Stemen. #ITP #Coq #Math
