--- a/README.org
+++ b/README.org
@@ -21,6 +21,11 @@ contenido.
 
 ** Junio de 2021
 
+*** 19-Jun-21
++ [[https://www.nature.com/articles/d41586-021-01627-2 ][Mathematicians welcome computer-assisted proof in 'grand unification' theory]]. ~ Davide Castelvecchi. #ITP #LeanProver #Mat
++ [[https://www.research-collection.ethz.ch/bitstream/handle/20.500.11850/489454/thesis.pdf?sequence=3][Formal verification of composable security proofs]]. ~ Seyed Reza Sefidgar. #PhDThesis #ITP #IsabelleHOL
++ [[https://arxiv.org/abs/2106.07707v1][An alternative axiomatic presentation of Nelson algebras]]. ~ Juan Manuel Cornejo, Andrés Gallardo, Luiz Monteiro, Ignacio Viglizzo. #ATP #Prover9 #Mace4 #Math
+
 *** 17-Jun-21
 + [[https://youtu.be/ikR4T44PT9w][La gran familia de los números]]. ~ Raúl Ibáñez. #Matemáticas
 + [[https://youtu.be/8LUPWXW_6rc][Computer says 'I don't know' (The case for Honest AI)]]. ~ Peter Flach. #AI via @hakankj
